--- a/styles/style.css
+++ b/styles/style.css
@@ -18,9 +18,10 @@ body {
 }
 
 header {
-    background-color: #1a1a1a;
+    background:rgb(26,26,26);
     margin: 0 auto;
     width: 100%;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.473);
 }
 
 .second-header {
@@ -101,7 +102,7 @@ header .cta {
     width: 20rem;
     height: 6rem;
     text-align: center;
-    line-height: 5rem;
+    line-height: 6rem;
     background-color: rgb(156, 42, 156);
 }
 
@@ -112,7 +113,6 @@ header .cta {
 .cta > .button > a {
     color: white;
     text-decoration: none;
-    text-align: justify;
 }
 
 header > #imgs {
@@ -144,7 +144,7 @@ section .content {
 }
 
 .objetivos {
-    background-color: #1a1a1a;
+    background: radial-gradient(farthest-corner at 0px 0px, rgb(38,38,38), rgb(34,34,34), rgb(30,30,30), rgb(26,26,26) 40%);
     color: white;
     overflow: hidden;
 }
@@ -158,7 +158,7 @@ section .content {
     margin-bottom: 5rem;
 }
 
-.objetivos > .content > .func {
+.objetivos > .content > .func { 
     width: 100%;
     padding: 3rem 0;
     clear: both;
